[build-system]
requires = ["setuptools>=65.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "python-memdb"
version = "1.0.0"
description = "High-performance hybrid in-memory + PostgreSQL database for real-time applications"
readme = "dyn_memdb/README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "Shaikh Adnan", email = "shaikh.adnan.dev@gmail.com"}
]
maintainers = [
    {name = "Shaikh Adnan", email = "shaikh.adnan.dev@gmail.com"}
]
keywords = [
    "database",
    "cache",
    "postgresql",
    "async",
    "real-time",
    "in-memory",
    "high-performance",
    "telephony",
    "session-management",
    "iot",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Internet",
    "Topic :: Software Development :: Libraries",
    "Framework :: AsyncIO",
]

dependencies = [
    "asyncpg>=0.28.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.urls]
Homepage = "https://github.com/shaikhadnan7621/memdb"
Documentation = "https://github.com/shaikhadnan7621/memdb#readme"
Repository = "https://github.com/shaikhadnan7621/memdb.git"
"Bug Tracker" = "https://github.com/shaikhadnan7621/memdb/issues"
"Source Code" = "https://github.com/shaikhadnan7621/memdb"

[tool.setuptools.packages.find]
where = ["."]
include = ["dyn_memdb*"]

[tool.black]
line-length = 100
target-version = ['py38']

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
